* Added -open class to coursepickers course-details when clicked it * Added mf-controls-container and mf-button-container to main functionality template for easier styling * Adjusted font weight in workspace materials assingment buttons * Fixed layout issues in coursepicker's dropdown * Removed coursepicker's base template as it was unnecessary

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/_workspaces-materials-defaults.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/_workspaces-materials-defaults.scss
@@ -453,7 +453,7 @@ body.workspace-materials-management #contentWorkspaceMaterialsManagement {
       box-shadow:none;
       border:0;
       border-radius:2px;
-      font-weight:300;
+      font-weight:400;
       text-transform:uppercase;
       padding:12px;
       transition:background 0.8s ease-in-out;
